@@ -1,8 +1,8 @@
 project_name = "Genet-example"
 project_id = "genet-example"
 db = {
-  (* postgresql or mysql[2] *)
-  engine = mysql2
+  (* postgresql or mysql *)
+  storage = mysql2
   name = "genet_example"
   user = genet
   host = localhost
